# sorvorliege

./: .gitignore
app/: .gitignore  generate_schema_ts.js  package-lock.json  package.json
app/src/lib/: websocket.ts
app/src/lib/components/: ServerList.svelte  ServerLogs.svelte  ServerView.svelte
app/src/lib/modals/: State.ts  api_types.ts
app/src/lib/stores/: log.ts
app/src/lib/stores/ws/: ws.ts
app/src/lib/stores/ws/commands/: index.ts
app/src/lib/util/: cmd.ts
app/src/modals/: State.ts
app/src/routes/: +page.svelte  index.svelte
app/src/stores/: ws.ts
app/src/stores/ws/: index.ts  ws.ts
app/src/stores/ws/commands/: index.ts
app/static/style/: dark.css
manager/: .gitignore  Cargo.toml
manager/manager_derive/: Cargo.toml
manager/manager_derive/src/: lib.rs
manager/src/: main.rs  messaging.rs  schema.rs
manager/src/commands/: commands.rs  handler.rs  mod.rs  server_crud.rs
manager/src/communicator/: communicator.rs  mod.rs  rcon.rs  test.rs
manager/src/server/: message.rs  mod.rs  server.rs
manager/src/state/: mod.rs
