[package]
name = "manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"

anyhow = "1.0.58"


tokio = { version = "1.19.2", features = ["full"] }

rustls-pemfile = "1.0.0"
tokio-rustls = "0.23.4"

tokio-tungstenite = {version = "0.17.1", features = ["rustls-tls-webpki-roots"]}
tungstenite = "0.17.2"

futures = "0.3.21"
futures-channel = "0.3.21"