[package]
name = "manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
manager_derive = { path = "./manager_derive" }

log = "0.4.17"
env_logger = "0.9.0"

base64 = "0.13.0"
urlencoding = "2.1.0"

chrono = "0.4.19"
uuid = { version = "1.1.2", features = ["v4", "serde"] } # uuid's fit well in this context.

async-trait = "0.1.56"
anyhow = "1.0.58"
thiserror = "1.0.31"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
strum = "0.24.1"
strum_macros = "0.24"

schemars = "0.8.10"

tokio = { version = "1.19.2", features = ["full"] }

rustls-pemfile = "1.0.0"
tokio-rustls = "0.23.4"

tokio-tungstenite = {version = "0.17.1", features = ["rustls-tls-webpki-roots"]}
tungstenite = "0.17.2"

futures = "0.3.21"
futures-channel = "0.3.21"